separate job api; switch to uuids
