# service/src/main/java/org/databiosphere/workspacedataservice/controller/ImportController.java
@@ -3,8 +3,8 @@ package org.databiosphere.workspacedataservice.controller;
 import java.util.UUID;
 import org.databiosphere.workspacedataservice.dataimport.ImportStatusResponse;
 import org.databiosphere.workspacedataservice.generated.ImportApi;
-import org.databiosphere.workspacedataservice.generated.ImportJobStatusServerModel;
 import org.databiosphere.workspacedataservice.generated.ImportRequestServerModel;
+import org.databiosphere.workspacedataservice.generated.JobStatusServerModel;
 import org.databiosphere.workspacedataservice.service.ImportService;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -21,7 +21,7 @@ public class ImportController implements ImportApi {
   }
 
   @Override
-  public ResponseEntity<ImportJobStatusServerModel> importV1(
+  public ResponseEntity<JobStatusServerModel> importV1(
       UUID instanceUuid, ImportRequestServerModel importRequest) {
     // TODO: validate instance
     // TODO: validate user has write permission on instance
@@ -31,24 +31,5 @@ public class ImportController implements ImportApi {
     ImportStatusResponse jobStatus = importService.queueJob(importRequest);
 
     return new ResponseEntity<>(jobStatus, HttpStatus.ACCEPTED);
-  }
-
-  @Override
-  public ResponseEntity<ImportJobStatusServerModel> importStatusV1(
-      UUID instanceUuid, String jobId) {
-    // TODO: validate instance (this only requires read permission, no permission checks required)
-    // TODO: validate jobId is non-empty
-
-    // retrieve jobId from the job store
-    ImportStatusResponse importJob = importService.getJob(jobId);
-
-    // return job status, 200 if job is completed and 202 if job is still running
-    HttpStatus responseCode = HttpStatus.ACCEPTED;
-    if (importJob.getStatus() == ImportJobStatusServerModel.StatusEnum.SUCCEEDED
-        || importJob.getStatus() == ImportJobStatusServerModel.StatusEnum.ERROR) {
-      responseCode = HttpStatus.OK;
-    }
-
-    return new ResponseEntity<>(importJob, responseCode);
   }
 }
