# service/src/main/resources/static/swagger/apis-v1.yaml
@@ -15,6 +15,8 @@ tags:
   # Tags should be listed in the order they should appear in the UI
   - name: Import
     description: Import APIs
+  - name: Job
+    description: Job APIs
 
 paths:
   ##############################
@@ -59,13 +61,17 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ImportJobStatus'
-  /{instanceUuid}/import/v1/{jobId}:
+                $ref: '#/components/schemas/JobStatus'
+
+  ##############################
+  # Job APIs
+  ##############################
+  /{instanceUuid}/job/v1/{jobId}:
     get:
-      summary: Get status of an import job.
-      operationId: importStatusV1
+      summary: Get status of a long-running job.
+      operationId: jobStatusV1
       tags:
-        - Import
+        - Job
       parameters:
         - $ref: '#/components/parameters/instanceUuidPathParam'
         - name: jobId
@@ -73,19 +79,20 @@ paths:
           required: true
           schema:
             type: string
+            format: uuid
       responses:
         200:
-          description: Import job completed.
+          description: Job completed.
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ImportJobStatus'
+                $ref: '#/components/schemas/JobStatus'
         202:
-          description: Import job still running.
+          description: Job still running.
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ImportJobStatus'
+                $ref: '#/components/schemas/JobStatus'
 
 components:
   # within each group, components should be listed alphabetically.
@@ -108,7 +115,7 @@ components:
         format: uuid
 
   schemas:
-    ImportJobStatus:
+    JobStatus:
       type: object
       required:
         - jobId
@@ -119,6 +126,7 @@ components:
       properties:
         jobId:
           type: string
+          format: uuid
         status:
           type: string
           enum: [ CREATED, QUEUED, RUNNING, SUCCEEDED, ERROR, CANCELLED, UNKNOWN ]
